# my-haskell-project

./: .ghci  .ghcid  .gitignore  .hlint.yaml  Makefile  README.md  build_output.txt  build_output_tests.txt  gemini_mcp_help.txt  gemini_mcp_real_help.txt  get_last_5_emails.py  get_reto_emails.py  hie.yaml  my-haskell-project.cabal  ormolu.yaml  replace_kinds.py  tasks.md
.agents/workflows/: view_artifacts.md
docs/: 01_concrete_structures.md  01_the_atoms.md  02_concrete_algebras.md  02_the_evolution.md  03_parameterized_structures.md  03_the_aggregators.md  04_the_deep_math.md  04_the_foldable.md  04_the_holy_trinity.md  08_deep_math_and_proofs.md  09_bibliography.md  annex_n_ary_glues.md  from_minimal_endofunctors_and_monads_outline.md  from_minimal_endofunctors_and_monads_outline.tex  from_minimal_endofunctors_and_monads_post.md  from_minimal_endofunctors_and_monads_post.tex  full_book.md  generate-live-artifacts.md  minimal_types.md  outline.md  post.md  temp.md  test_ord.hs  test_void.hi  test_void.hs  test_void2.hs  test_void3.hs  test_void4.hi  test_void4.hs  test_void_exercise.hi  test_void_exercise.hs  the_book_latex.tex  the_book_native.html
docs/blog-posts/: 01_concrete_structures.md  03_parameterized_structures.md  04_the_holy_trinity.md  07_n_ary_glues.md  08_deep_math_and_proofs.md  09_bibliography.md  full_book.md
my-haskell-project/: my-haskell-project.cabal
my-haskell-project/test/: HelloWorld_Test.hs  LambdaTest.hs
scratch/: TestUpdates.hs
src/: HelloWorld.hs  Lambda.hs  Parser.hs
src/Exercism/: Anagram.hs  Bob.hi  Bob.hs  Clock.hs  Pangram.hs  ReverseString.hs  Zipper.hs  Zipper.md
src/FlightClient/: Main.hs  Mock.hs  SerpApi.hs  Types.hs
src/Lambda/: Functor.hi  Functor.hs  HoverDam.hs  Interpreter.hs  Lens.hs  ListAverage.hs  MiniWhile.hs  MiniWhite.hs  Parser.hs  RandomWalk.hs  State.hs  Subdist.hs  UserAddressCity.hs
src/WeatherClient/: Main.hs
test/: ExercismMain.hs  ExercismTest.hs  HelloWorld_Test.hs  LambdaMain.hs  LambdaTest.hs  Main.hs  MonadTest.hs
test/Exercism/: AnagramTest.hs  BobTest.hs  ClockTest.hs  PangramTest.hs  ReverseStringTest.hs  ZipperTest.hs
test/Lambda/: FunctorHelp.hs  FunctorTest.hs  FunctorTestUtils.hs  HoverDamTest.hs  InterpreterTest.hs  LensTest.hs  ListAverageTest.hs  MiniWhileRepro.hs  MiniWhileTest.hs  MonadTest.hs  ParserTest.hs  RandomWalkTest.hs  StateTest.hs  SubdistTest.hs  UserAddressCityTest.hs
