cabal-version: 3.0
name: my-haskell-project
version: 0.1.0.0
synopsis: Haskell learning project including Exercism exercises and lambda calculus
author: Olivier
maintainer: odewolf@gmail.com

-- Common GHC warning flags
common warnings
  ghc-options: -Wall

-- Common test dependencies, shared across all test suites
common share-tests-deps
  import: warnings
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

-- The main library for the project
library
  import: warnings
  exposed-modules:
    Exercism.Anagram
    Exercism.Bob
    Exercism.Pangram
    Exercism.ReverseString
    HelloWorld
    Lambda
    Lambda.Functor
    Lambda.Parser
    Lambda.State

  hs-source-dirs: src
  ghc-options: -fbyte-code
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    containers,
    text,

-- Defines the main library/executable
executable my-program
  import: warnings
  main-is: HelloWorld.hs
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    my-haskell-project,

  ghc-options:
    -main-is
    HelloWorld

-- Defines the test suite for HelloWorld
test-suite my-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: HelloWorldTest.hs
  hs-source-dirs:
    test
    src

  ghc-options: -fbyte-code
  other-modules: HelloWorld
  build-depends: HUnit

test-suite lambda-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: LambdaMain.hs
  hs-source-dirs:
    test
    src

  other-modules:
    Lambda
    Lambda.Functor
    Lambda.FunctorTest
    Lambda.MonadTest
    Lambda.Parser
    Lambda.ParserTest
    Lambda.State
    Lambda.StateTest
    LambdaTest

  build-depends:
    QuickCheck,
    checkers,
    mtl,

  ghc-options: -fbyte-code

test-suite exercism-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: ExercismMain.hs
  other-modules:
    Exercism.Anagram
    Exercism.AnagramTest
    Exercism.Bob
    Exercism.BobTest
    Exercism.Pangram
    Exercism.PangramTest
    Exercism.ReverseString
    Exercism.ReverseStringTest
    ExercismTest
    HelloWorld

  hs-source-dirs:
    test
    src

  build-depends:
    QuickCheck,
    containers,

  ghc-options: -fbyte-code

test-suite all-tests
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test

  other-modules:
    Exercism.AnagramTest
    Exercism.BobTest
    Exercism.PangramTest
    Exercism.ReverseStringTest
    ExercismTest
    Lambda.FunctorTest
    Lambda.MonadTest
    Lambda.ParserTest
    Lambda.StateTest
    LambdaTest

  build-depends:
    my-haskell-project,
    QuickCheck,
    checkers,
    containers,
    mtl,

  ghc-options: -fbyte-code
