cabal-version: 3.0
name: my-haskell-project
version: 0.1.0.0
synopsis: Haskell learning project including Exercism exercises and lambda calculus
author: Olivier
maintainer: odewolf@gmail.com

-- Common GHC warning flags
common warnings
  ghc-options:
    -Wall
    -fbyte-code

-- Common test dependencies, shared across all test suites
common share-tests-deps
  import: warnings
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    containers,
    megaparsec,
    parser-combinators,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    transformers,

-- The main library for the project
library
  import: warnings
  exposed-modules:
    Exercism.Anagram
    Exercism.Bob
    Exercism.Pangram
    Exercism.ReverseString
    Lambda
    Lambda.Functor
    Lambda.HoverDam
    Lambda.Interpreter
    Lambda.Parser
    Lambda.RandomWalk
    Lambda.State
    Lambda.Subdist

  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    QuickCheck,
    base >=4.14 && <5,
    containers,
    megaparsec,
    mtl,
    parser-combinators,
    text,
    transformers,

test-suite lambda-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: LambdaMain.hs
  hs-source-dirs:
    test

  other-modules:
    Lambda.FunctorTest
    Lambda.FunctorTestUtils
    Lambda.HoverDamTest
    Lambda.InterpreterTest
    Lambda.MonadTest
    Lambda.ParserTest
    Lambda.RandomWalkTest
    Lambda.StateTest
    Lambda.SubdistTest
    LambdaTest

  build-depends:
    QuickCheck,
    checkers,
    mtl,
    my-haskell-project,

test-suite exercism-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: ExercismMain.hs
  other-modules:
    Exercism.AnagramTest
    Exercism.BobTest
    Exercism.PangramTest
    Exercism.ReverseStringTest
    ExercismTest

  hs-source-dirs:
    test

  build-depends:
    QuickCheck,
    containers,
    my-haskell-project,

test-suite all-tests
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test

  other-modules:
    Exercism.AnagramTest
    Exercism.BobTest
    Exercism.PangramTest
    Exercism.ReverseStringTest
    ExercismTest
    Lambda.FunctorTest
    Lambda.FunctorTestUtils
    Lambda.HoverDamTest
    Lambda.InterpreterTest
    Lambda.MonadTest
    Lambda.ParserTest
    Lambda.RandomWalkTest
    Lambda.StateTest
    Lambda.SubdistTest
    LambdaTest

  build-depends:
    QuickCheck,
    checkers,
    containers,
    mtl,
    my-haskell-project,

  ghc-options: -fbyte-code
