cabal-version: 3.0
name: my-haskell-project
version: 0.1.0.0
synopsis: Haskell learning project including Exercism exercises and lambda calculus
author: Olivier
maintainer: odewolf@gmail.com

-- Common GHC warning flags
common warnings
  ghc-options:
    -Wall
    -fbyte-code

-- Common test dependencies, shared across all test suites
common share-tests-deps
  import: warnings
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    containers,
    log-domain,
    megaparsec,
    monad-bayes,
    parser-combinators,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    transformers,
    time,

-- The main library for the project
library
  import: warnings
  exposed-modules:
    Exercism.Anagram
    Exercism.Bob
    Exercism.Clock
    Exercism.Pangram
    Exercism.ReverseString
    Exercism.Zipper
    Lambda
    Lambda.Functor
    Lambda.HoverDam
    Lambda.Interpreter
    Lambda.ListAverage
    Lambda.Parser
    Lambda.RandomWalk
    Lambda.State
    Lambda.Subdist

  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    QuickCheck,
    base >=4.14 && <5,
    containers,
    log-domain,
    megaparsec,
    monad-bayes,
    mtl,
    parser-combinators,
    text,
    transformers,
    time,
    req,
    aeson,
    bytestring

test-suite lambda-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: LambdaMain.hs
  hs-source-dirs:
    test

  other-modules:
    Lambda.FunctorTest
    Lambda.FunctorTestUtils
    Lambda.HoverDamTest
    Lambda.InterpreterTest
    Lambda.ListAverageTest
    Lambda.MonadTest
    Lambda.ParserTest
    Lambda.RandomWalkTest
    Lambda.StateTest
    Lambda.SubdistTest
    LambdaTest

  build-depends:
    QuickCheck,
    checkers,
    mtl,
    my-haskell-project,

test-suite exercism-test
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: ExercismMain.hs
  other-modules:
    Exercism.AnagramTest
    Exercism.BobTest
    Exercism.ClockTest
    Exercism.PangramTest
    Exercism.ReverseStringTest
    Exercism.ZipperTest
    ExercismTest

  hs-source-dirs:
    test

  build-depends:
    QuickCheck,
    containers,
    my-haskell-project,

test-suite all-tests
  import: share-tests-deps
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    test

  other-modules:
    Exercism.AnagramTest
    Exercism.BobTest
    Exercism.ClockTest
    Exercism.PangramTest
    Exercism.ReverseStringTest
    Exercism.ZipperTest
    ExercismTest
    Lambda.FunctorTest
    Lambda.FunctorTestUtils
    Lambda.HoverDamTest
    Lambda.InterpreterTest
    Lambda.ListAverageTest
    Lambda.MonadTest
    Lambda.ParserTest
    Lambda.RandomWalkTest
    Lambda.StateTest
    Lambda.SubdistTest
    LambdaTest

  build-depends:
    QuickCheck,
    checkers,
    containers,
    mtl,
    my-haskell-project,

  ghc-options: -fbyte-code

executable weather-client
  import: warnings
  main-is: Main.hs
  hs-source-dirs: src/WeatherClient
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    req,
    aeson,
    text,
    bytestring

executable flight-client
  import: warnings
  main-is: Main.hs
  other-modules:
    SerpApi
    Mock
    Types
  hs-source-dirs: src/FlightClient
  default-language: Haskell2010
  build-depends:
    base >=4.14 && <5,
    req,
    aeson,
    text,
    bytestring,
    time
